# baba-is-you-agent-framework

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  MCP_IMPROVEMENTS.md  README.md  TODO.md  config.toml  pixi.toml  pyproject.toml  requirements.txt
agent/: CLAUDE.md  README.md  __init__.py  baba_agent.py  baba_agent_sdk.py  claude_agent.py  pixi.toml  test_connection.py
agents/: claude-code.py  claude_code_agent.py  demo.py  demo_agent.py  random-agent.py  random_agent.py  user.py
baba/: __init__.py  agent.py  all_objects.py  envs.py  episode_player.py  grid.py  level_loader.py  object_ids.py  play.py  properties.py  registration.py  rendering.py  rule.py  sprite_loader.py  sprites.py  utils.py  world_object.py
baba_is_eval/: .gitignore  README.md  game_mcp.py  help_rules.json  io.lua  setup.sh
docs/: claude_code_agent_design.md  level_format_analysis.md  level_loader_documentation.md  object_reference.md
scripts/: create_demo_recordings.py  custom_level.py  demo_sprites.py  example_agent.py  interactive_rock_win_demo.py  list_environments.py  play_game.py  play_manual.py  record_claude_code_gameplay.py  record_claude_gameplay.py  record_claude_simple.py  record_demo_gifs.py  record_demo_push_puzzle.py  record_gameplay.py  record_push_puzzle_comparison.py  setup_game.py  setup_sprites.py  sprite_showcase.py  visualize_level.py
tests/: CLAUDE.md  README.md  __init__.py  conftest.py  test_all_objects.py  test_all_objects_integration.py  test_edge_cases.py  test_environments.py  test_game_mechanics.py  test_grid.py  test_integration.py  test_level_loader.py  test_objects.py  test_rules.py
