[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baba-is-agi"
version = "0.1.0"
description = "Agentic programs for playing Baba Is You"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "femtomc" }]
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "opencv-python>=4.10",
    "pygame>=2.5",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["baba*", "agent*"]
exclude = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]         # imported but unused
"tests/*" = ["ARG001", "ARG002"] # unused arguments in tests

[tool.ruff.lint.isort]
known-first-party = ["baba", "agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
